--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .iphonemini {
   max-width: 100%;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   justify-content: center;
 }
