--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
 .top-header {
   background-color: #000000;
+  border-bottom: 1px solid #000000;
   padding: 20px;
   transition: background-color 0.3s ease;
   position: relative;
@@ -76,8 +77,7 @@ body {
   top: 80px;
   left: 20px;
   padding: 20px;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
+  color: #000000;
   font-size: 8px;
   font-family: monospace;
   border-radius: 5px;
@@ -153,7 +153,6 @@ body {
   background-color: #ffffff;
   transition: width 0.1s linear;
 }
-
 
 
 
