--- a/style.css
+++ b/style.css
@@ -386,49 +386,59 @@ body {
   border-radius: 5px;
 }
 
-/* Add these styles to your existing CSS file or replace the relevant sections */
 
+
+/* Add these styles to your existing CSS file or replace the relevant sections */
 
 .about {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 100vh;
   display: flex;
   justify-content: center;
 }
 
 .top-about {
+  flex: 1;
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: 100vh;
 }
-
 
 .top-showcase_about {
-  border-top: 1px solid #000;
-  border-bottom: 1px solid #000;
-  padding-top: 40px;
-}
-
-.frame {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
-  gap: 40px;
-  width: 100%;
-  max-width: 1200px;
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  overflow-y: auto;
 }
 
 .frame-about-1 {
+  flex: 1;
   display: flex;
-  align-items: flex-start;
   flex-direction: column;
   width: 100%;
-  min-width: 280px;
+  height: 100%;
+  overflow-x: hidden;
+  /* Prevent horizontal scrolling */
 }
 
 .frame-about-2 {
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 20px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding: 40px 20px;
+  min-width: 40vw;
+}
+
+.frame-about-3 {
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  min-height: 300px;
+  /* 最小高さを設定 */
 }
 
 .text-about {
@@ -436,10 +446,10 @@ body {
   font-family: Inter, sans-serif;
   font-size: 14px;
   font-style: normal;
-  min-width: 280px;
   font-weight: 400;
   line-height: 150%;
   letter-spacing: 1px;
+  margin-bottom: 20px;
 }
 
 .text-about-intro {
@@ -450,32 +460,57 @@ body {
   font-weight: 300;
   line-height: 150%;
   letter-spacing: 1px;
+  margin-bottom: 20px;
 }
 
 #3dAvatar {
+  flex: 1;
   width: 100%;
-  height: 100%;
+  justify-content: flex-end;
+  align-items: center;
+  overflow: hidden;
 }
 
 @media (min-width: 768px) {
-  .top-showcase_about {
-    padding-top: 40px;
-  }
 
   .frame-about-1 {
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: stretch;
   }
 
   .frame-about-2 {
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 20px;
+    width: 40%;
+    padding: 40px 20px;
   }
 
+  .frame-about-3 {
+    flex: 1;
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+    justify-content: flex-end;
+    /* 最小高さを設定 */
+
+  }
+
+  .frame-about-3.about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
   #3dAvatar {
-    width: 100%;
-    height: 600px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    overflow: hidden;
+  }
+
+  #3dAvatar canvas {
+    max-width: 100%;
+    height: auto;
   }
 }
