--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html {
 .title {
     /* position: absolute; */
     font-size: 24px;
-    font-weight: 700;
+    font-weight: 400;
     /* height: 100%; */
 }
 
@@ -258,6 +258,7 @@ html {
 
 .img-works {
     width: 100%;
+    min-width: 300px;
     aspect-ratio: 1 / 1;
     object-fit: cover;
     border: 1.5px solid #000aff;
@@ -420,7 +421,6 @@ html {
     .title {
         /* position: absolute; */
         font-size: 20px;
-        font-weight: 700;
     }
 
     .h-1 {
@@ -428,11 +428,11 @@ html {
     }
 
     .h-2 {
-        font-size: 20px;
+        font-size: 24px;
     }
 
     .h-3 {
-        font-size: 16px;
+        font-size: 20px;
     }
 
     .text {
